--- a/src/App.css
+++ b/src/App.css
@@ -185,16 +185,26 @@
   padding-bottom: 1.5em !important;
 }
 
-.css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
+/* .css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
   border: solid 1px #282828 !important;
   border-radius: 5px !important;
   font-weight: bolder !important;
   min-width: 100px !important;
   position: relative;
   min-height: 42px !important;
+} */
+
+.sidebtns{
+  border: solid 1px #282828 !important;
+  border-radius: 5px !important;
+  font-weight: bolder !important;
+  min-width: 100px !important;
+  position: relative;
+  min-height: 42px !important;
+
 }
 
-.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
+.sidebtns.Mui-selected{
   background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.06) 100%) !important;
   border-radius: 5px;
   overflow: hidden;
@@ -205,7 +215,21 @@
   min-width: 100px !important;
   position: relative;
   min-height: 42px !important;
+
 }
+
+/* .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
+  background: linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.06) 100%) !important;
+  border-radius: 5px;
+  overflow: hidden;
+  color: white !important;
+  border: solid 1px #282828 !important;
+  
+  font-weight: bolder !important;
+  min-width: 100px !important;
+  position: relative;
+  min-height: 42px !important;
+} */
 
 .css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
   color: grey !important;
