--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@
   color: white !important;
 } */
 
-.css-wjh20t-MuiPagination-ul {
+.MuiPagination-ul {
   align-items: stretch !important;
 }
 
