--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+:root {
+  --background: #161616; /* Default dark mode background color */
+  --text: rgb(228, 228, 228); /* Default dark mode text color */
+}
+
+body {
+  background-color: var(--background);
+  color: var(--text);
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.light-mode {
+  --background: white; /* Light mode background color */
+  --text: black; /* Light mode text color */
+}
+
 .App {
   text-align: center;
   background: #161616;
@@ -488,16 +504,24 @@ select {
   .ss{
     max-width: 100%!important;
   }
-  .MuiBox-root .css-0 {
-    display: flex!important;
+  .MuiBox-root{
+    /* display: flex!important; */
     justify-content: space-between!important;
     flex-wrap: nowrap!important;
-    flex-direction: column-reverse!important;
+    /* flex-direction: column-reverse!important; */
     align-content: flex-start!important;
     row-gap: 21px;
-    padding: 0!important;
+    /* padding:25px!important; */
 }
 .css-heg063-MuiTabs-flexContainer{
   column-gap: 15px !important;
 }
+.sidebtns{
+  margin: 0!important;
+}
+.MuiTabs-root .sidebtns:nth-child(2) {
+ margin-left: 12px;
+ margin-right: 12px;
+}
+
 }
